--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,11 @@
+spring.config.import=optional:application-local.properties
+
 spring.application.name=Notepad App
 spring.datasource.url=jdbc:mysql://localhost:3306/notepad_app
-spring.datasource.username=root
-spring.datasource.password=@Rvm2307mysqlrootpassword
+
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
