Add JSP-based UI support with theme toggle and dashboard navigation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,20 @@
+# Use externalized credentials
 spring.config.import=optional:application-local.properties
 
+# App Identity
 spring.application.name=Notepad App
-spring.datasource.url=jdbc:mysql://localhost:3306/notepad_app
 
+# Database Config
+spring.datasource.url=jdbc:mysql://localhost:3306/notepad_app
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
-
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# JSP View Resolver
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
